frontend/test/should_fail/index_exec_edge_isInFromIndexFromTo_index_mismatch.grg
#using "index_exec_model.gm"

sequence s(j:int)
{
	{ i:set<AEdge>=isInEdgesFromIndexFrom(::e, j, j) }
}